# MyNotes

./: 20200112_static_cast.md  2020111_自动驾驶笔记.md  20201215_Docker笔记.md  20201216_Git笔记.md  20201217_内存模型和名称空间.md  20201218_Apollo笔记.md  20201219_网络配置(IP地址，子网掩码，网关，dns).md  20201220_Apollo笔记.md  20201220_protobuf笔记.md  20201221_Apollo笔记.md  20201222_Apollo笔记.md  20201222_C++final关键字.md  20201222_交流笔记.md  20201227_protobuf技术详解.md  20201229_string_view使用介绍.md  20201229_智能指针.md  20201230_std_array.md  20210103_std_move.md  20210105_gflags的使用.md  20210113_非常棒的Apollo源码解析文章.md  20210118_Apollo决策规划总结.md  20210126新手如何从头开始学习Apollo.md  20210127离散点曲线平滑原理.md  20210129_Apollo轨迹规划技术分享.md  20210130_目录符号表示.md  20210202_定位.md  20210205_互联网协议.md  20210224_Apollo公众号文章地址汇总.md  20210307_今日任务总结.md  20210308_今日任务总结.md  20210320_navigation组织结构.md  20210320_动态链接与静态链接.md  20210321_base_local_planner笔记.md  20210322_ROS Nodehandle句柄.md  20210322_costmap笔记.md  20210322_global_planner.md  20210322_move_base.cpp笔记.md  20210322_navigation软件包关系梳理.md  20210323_costmap2D接口.md  20210324_Astar.md  (+58 more)
apollo_planning/: on_lane_planning.cc  planning_base.h
apollo_planning/conf/: planning_config.pb.txt
apollo_planning/planner/: planner.h  planner_dispatcher.h
apollo_planning/planner/navi/: navi_planner.h
apollo_planning/proto/: planning.proto
move_base_notes/: 20210427_costmap_2d功能包总结.md  20210501_local_planner局部规划器总结.md
navigation/: doxyfile.dot
navigation/base_local_planner/src/: simple_trajectory_generator.cpp
navigation/costmap_2d/src/: costmap_2d.cpp  costmap_2d_ros.cpp
navigation/dwa_local_planner/src/: dwa_planner.cpp  dwa_planner_ros.cpp
navigation/global_planner/src/: astar.cpp  plan_node.cpp  planner_core.cpp  quadratic_calculator.cpp
navigation/move_base/src/: move_base.cpp
navigation/reference/html/: amcl__sensor_8h_source.html  astar_8h_source.html  base__local__planner_8h_source.html  carrot__planner_8h_source.html  classPlannerCore.html  classbase__local__planner_1_1MapGrid.html  classbase__local__planner_1_1SimpleTrajectoryGenerator.html  classbase__local__planner_1_1TrajectoryPlannerROS.html  classbase__local__planner_1_1TrajectorySampleGenerator.html  classes.html  classglobal__planner_1_1DijkstraExpansion.html  classglobal__planner_1_1PotentialCalculator.html  dijkstra_8h_source.html  dir_022ab8b8b2793d2a4d98ca8ea9cb4917.html  dir_16510bf0b8e4dfa92912bb2cd2c73724.html  dir_414b209fa36dd1433a9bb8cd280add1a.html  dir_49df9b7a505909e828d27438238a065a.html  dir_a9188d7c3d194212696f636cafd54aab.html  dir_cd461cc6308eb4550f80090edf4aeb11.html  dir_d1b05214bc26678a70bc66257a1f97b6.html  expander_8h_source.html  files.html  functions.html  functions_b.html  (+30 more)
代码仓库/: 未命名绘图.drawio
代码仓库/STL_note/: algorithms.cpp  assotiative_containers.cpp  container_adapter.cpp  iterators.cpp  modifying_algorithms.cpp  non-modifying_algorithms.cpp  numeric_algorithms.cpp  order_changing_algorithms.cpp  overview.cpp  sequence_containers.cpp  sorted_data_algorithms.cpp  sorting.cpp  unordered_assotiative_containers.cpp
代码仓库/catkin_test_ws/: fruit.csv
代码仓库/catkin_test_ws/src/fortest/: CMakeLists.txt
代码仓库/catkin_test_ws/src/fortest/data/: traj1.csv  traj2.csv  traj3.csv  traj4.csv  traj5.csv  traj6.csv
代码仓库/catkin_test_ws/src/fortest/include/: discrete_points_smooth_ipopt_interface.h  discrete_points_smoother.h  matplotlibcpp.h
代码仓库/catkin_test_ws/src/fortest/include/curve1d/: curve1d.h  polynomial_curve1d.h  quintic_polynomial_curve1d.h
代码仓库/catkin_test_ws/src/fortest/script/: mat2csv.py
代码仓库/catkin_test_ws/src/fortest/src/: cppad_example.cpp  cppad_mytest.cpp  dataType_trans.cpp  discrete_points_main.cpp  discrete_points_smooth_ipopt_interface.cpp  discrete_points_smoother.cpp  dy_test.cpp  fake_code  flow.drawio  generate_discrete_points.cpp  gnss_dy_rs422.cpp  mytest.cpp  osqp_example.cpp  test2.cpp  test3.cpp  test4.cpp
代码仓库/catkin_test_ws/src/fortest/src/curve1d/: curve1d_main.cpp  quintic_polynomial_curve1d.cpp
代码仓库/catkin_test_ws/src/offer/: CMakeLists.txt
代码仓库/catkin_test_ws/src/offer/src/: s1.cpp  s10.cpp  s11.cpp  s12.cpp  s13.cpp  s14.cpp  s15.cpp  s16.cpp  s17.cpp  s18.cpp  s19.cpp  s20.cpp  s21.cpp  s22.cpp  s23.cpp  s24.cpp  s25.cpp  s26.cpp  s27.cpp  s28.cpp  s29.cpp  s3.cpp  s30.cpp  s31.cpp  s32.cpp  s33.cpp  s34.cpp  s35.cpp  s36.cpp  s37.cpp  s38.cpp  s39.cpp  s4.cpp  s40.cpp  s41.cpp  s42.cpp  s43.cpp  s44.cpp  s45.cpp  s46.cpp  (+27 more)
代码仓库/navigation_ws_1/: ReadME.txt
代码仓库/navigation_ws_2/: ReadME.txt
代码仓库/navigation_ws_3/: ReadME.txt
代码仓库/navigation_ws_4/: ReadME.txt
代码仓库/navigation_ws_5/: ReadME.txt  run.sh
代码仓库/navigation_ws_6/: ReadME.txt  cfg_open.sh  run.sh
图片/20201215_Docker笔记/: timg
图片/20201216_Git笔记/: 640
图片/20201229_string_view使用介绍/: 20170910154041057
图片/20201230_std_array/: 20170329184222889
图片/20210127离散点曲线平滑原理/: 132  640
图片/20210205_互联网协议/: 20180802094638614  20180802100026735  20180802102210541  20180802104635691  20180802111038690  20180802113950212  20180802115551472  20180802133716513  20180802144026546  20180802144225976  20180802145027656  20180802153427356  20180802154017799
图片/20210322_global_planner/: 20150413211206044
图片/20210326_Apollo运动规划总结/: 640
图片/20210427_costmap_2d功能包总结/: 20170504190526248  20170506161254343  20170506161337831  20170506161422176  20170506161457408
图片/20210524_开始学习TEB planner/: 640  equation
图片/20210715_碰撞检测/: costmap_converter
第三方库/ThirdParty-ASL/: Makefile  arithchk  coinasl.pc  config.status  details.c  details.lo  fpinit.c  libcoinasl.la  libtool  stdio1.h
第三方库/ThirdParty-HSL/: CoinHslConfig.h  Makefile  coinhsl.pc  config.h  config.status  libcoinhsl.la  libtool  metis_adapter.lo  stamp-h2
第三方库/ThirdParty-Mumps/: Makefile  coinmumps.pc  config.h  config.status  dmumps_comm_buffer.mod  dmumps_load.mod  dmumps_ooc.mod  dmumps_ooc_buffer.mod  dmumps_parallel_analysis.mod  dmumps_struc_def.mod  libcoinmumps.la  libtool  mumps_ooc_common.mod  mumps_sol_es.mod  mumps_static_mapping.mod  stamp-h2  tools_common.mod
论文/: 文献阅读积累.md
论文/扩展/: 审稿意见(吴).docx  非线性车辆队列协同自适应抗扰纵向控制方法1030_返回.docx
(+2342 files in other folders)
